--- a/html_advanced/6-index.html
+++ b/html_advanced/6-index.html
@@ -14,14 +14,17 @@
             Header
         </header>
         <main>
-            <section>Hero section</section>
-            <section>Services section</section>
+            <section>Hero section
+            </section>
+            <section>Services section
+            </section>
             <section>Works section
                 <article>Work 1</article>
                 <article>Work 2</article>
                 <article>Work 3</article>
             </section>
-            <section>About section</section>
+            <section>About section
+            </section>
             <section>Latest news section
                 <article>Article 1</article>
                 <article>Article 2</article>
@@ -32,7 +35,8 @@
                 <article> Testimonials 2</article>
                 <article> Testimonials 3</article>
             </section>
-            <section>Contact section</section>
+            <section>Contact section
+            </section>
                 <aside>
                         Aside
                 </aside>
