--- a/html_advanced/6-index.html
+++ b/html_advanced/6-index.html
@@ -14,28 +14,35 @@
             Header
         </header>
         <main>
-            <section>Hero section
+            <section>
+                Hero section
             </section>
-            <section>Services section
+            <section>
+                Services section
             </section>
-            <section>Works section
+            <section>
+                Works section
                 <article>Work 1</article>
                 <article>Work 2</article>
                 <article>Work 3</article>
             </section>
-            <section>About section
+            <section>
+                About section
             </section>
-            <section>Latest news section
+            <section>
+                Latest news section
                 <article>Article 1</article>
                 <article>Article 2</article>
                 <article>Article 3</article>
             </section>
-            <section>Testimonials section
+            <section>
+                Testimonials section
                 <article> Testimonials 1</article>
                 <article> Testimonials 2</article>
                 <article> Testimonials 3</article>
             </section>
-            <section>Contact section
+            <section>
+                Contact section
             </section>
                 <aside>
                         Aside
