--- a/html_advanced/7-index.html
+++ b/html_advanced/7-index.html
@@ -15,36 +15,35 @@
         </header>
         <main>
             <h1>Homepage</h1>
-            <section>Hero section
-            </section>
-            <section>Services section
-            </section>
-            <section>Works section
-                <article>Work 1</article>
-                <article>Work 2</article>
-                <article>Work 3</article>
-            </section>
-            <section>About section
-            </section>
-            <section>Latest news section
-                <article>Article 1</article>
-                <article>Article 2</article>
-                <article>Article 3</article>
-            </section>
-            <section>Testimonials section
-                <article> Testimonials 1</article>
-                <article> Testimonials 2</article>
-                <article> Testimonials 3</article>
-            </section>
-            <section>Contact section
-            </section>
+            <main>
+                <section>Hero section</section>
+                <section>Services section</section>
+                <section>
+                    Works section
+                    <article>Work 1</article>
+                    <article>Work 2</article>
+                    <article>Work 3</article>
+                </section>
+                <section>About section</section>
+                <section>
+                    Latest news section
+                    <article>Article 1</article>
+                    <article>Article 2</article>
+                    <article>Article 3</article>
+                </section>
+                <section>
+                    Testimonials section
+                    <article>Testimonial 1</article>
+                    <article>Testimonial 2</article>
+                    <article>Testimonial 3</article>
+                </section>
+                <section>Contact section</section>
                 <aside>
-                        Aside
+                    Aside
                 </aside>
             </main>
-        <footer>
+            <footer>
                 Footer
-        </footer>
-    </body>
-
-</html>
+            </footer>
+        </body>
+    </html>
