--- a/html_advanced/9-index.html
+++ b/html_advanced/9-index.html
@@ -16,10 +16,8 @@
         <main>
             <h1>Homepage</h1>
             <main>
-                <section><h2>We help you build your brand!</h2>
-                </section>
-                <section><h2>Services</h2>
-                </section>
+                <section><h2>We help you build your brand!</h2></section>
+                <section><h2>Services</h2></section>
                 <section><h2>Works</h2>
                     <article>Work 1</article>
                     <article>Work 2</article>
@@ -37,8 +35,7 @@
                     <article>Testimonial 2</article>
                     <article>Testimonial 3</article>
                 </section>
-                <section><h2> Contact</h2>
-                </section>
+                <section><h2> Contact</h2></section>
                 <aside>
                     Aside
                 </aside>
