--- a/html_advanced/11-styleguide.html
+++ b/html_advanced/11-styleguide.html
@@ -16,6 +16,7 @@
             <section>
                 <header>
                     <h2>Headings</h2>
+                </header>
                     <h1>Heading level 1</h1>
                     <h2>Heading level 2</h2>
                     <h3>Heading level 3</h3>
@@ -26,7 +27,6 @@
             </section>
             </main>
         <footer>
-                Footer
         </footer>
     </body>
 
