--- a/html_advanced/12-index.html
+++ b/html_advanced/12-index.html
@@ -19,29 +19,29 @@
             <section>
                 <h2>Services</h2>
                 <p>We work with you</p>
-                <h3>Design & Concept</h3>
-                <h3>Digital Strategy</h3>
-                <h3>Content Strategy</h3>
-                <h3>UX Design</h3>
-                <h3>Web Development</h3>
-                <h3>Social Media</h3>
+                    <h3>Design & Concept</h3>
+                    <h3>Digital Strategy</h3>
+                    <h3>Content Strategy</h3>
+                    <h3>UX Design</h3>
+                    <h3>Web Development</h3>
+                    <h3>Social Media</h3>
             </section>
             <section>
                 <h2>Works</h2>
                 <p>Take a look in our portfolio</p>
-                <article><h3>Interior Design</h3></article>
-                <article><h3>Web Development</h3></article>
-                <article><h3>Personal Brand</h3></article>
+                <article>   <h3>Interior Design</h3></article>
+                <article>   <h3>Web Development</h3></article>
+                <article>   <h3>Personal Brand</h3></article>
             </section>
             <section>
                 <h2>About Us</h2>
                 <p>Everything about us</p>
-                <h3>Who are we</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p> <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
-                <h3>Our culture</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
-                <h3>How we work</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
+                    <h3>Who are we</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
+                    <h3>Our culture</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
+                    <h3>How we work</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
             </section>
             <section>
                 <h2>Latest news</h2>
@@ -68,7 +68,8 @@
                 <article>Testimonial 2</article>
                 <article>Testimonial 3</article>
             </section>
-            <section><h2>Contact</h2>
+            <section>
+                <h2>Contact</h2>
                 <p>We like to know new people</p>
             </section>
             <aside>
