--- a/html_advanced/15-index.html
+++ b/html_advanced/15-index.html
@@ -36,11 +36,11 @@
         </section>
         <section>
             <div>
-            <h2>Works</h2>
-            <p>Take a look in our portfolio</p>
-            <article> <h3>Interior Design</h3> </article>
-            <article> <h3>Web Development</h3> </article>
-            <article> <h3>Personal Brand</h3> </article>
+                <h2>Works</h2>
+                <p>Take a look in our portfolio</p>
+                <article> <h3>Interior Design</h3> </article>
+                <article> <h3>Web Development</h3> </article>
+                <article> <h3>Personal Brand</h3> </article>
         </div>
         </section>
         <section>
@@ -62,7 +62,7 @@
             </div>
         </section>
         <section>
-            <div></div>
+            <div>
                 <h2>Latest news</h2>
                 <article>
                     <p>Career</p>
