--- a/html_advanced/15-index.html
+++ b/html_advanced/15-index.html
@@ -38,9 +38,15 @@
             <div>
                 <h2>Works</h2>
                 <p>Take a look in our portfolio</p>
-                <article> <h3>Interior Design</h3> </article>
-                <article> <h3>Web Development</h3> </article>
-                <article> <h3>Personal Brand</h3> </article>
+                <article>
+                    <h3>Interior Design</h3>
+                </article>
+                <article>
+                    <h3>Web Development</h3>
+                </article>
+                <article>
+                    <h3>Personal Brand</h3>
+                </article>
         </div>
         </section>
         <section>
@@ -48,17 +54,11 @@
                 <h2>About Us</h2>
                 <p>Everything about us</p>
                 <h3>Who are we</h3>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!
-                    </p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
                 <h3>Our culture</h3>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!
-                    </p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
                 <h3>How we work</h3>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!
-                    </p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
             </div>
         </section>
         <section>
@@ -73,12 +73,12 @@
                     <p>Digital Life</p>
                     <h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p>
-            </article>
-            <article>
-                <p>Social</p>
-                <h3>Bestiarum vero nullum iudicium puto.</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
-            </article>
+                </article>
+                <article>
+                    <p>Social</p>
+                    <h3>Bestiarum vero nullum iudicium puto.</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
+                </article>
             </div>
         </section>
         <section>
