create Structure your sections

--- a/html_advanced/16-index.html
+++ b/html_advanced/16-index.html
@@ -126,7 +126,7 @@
         </section>
         <section>
             <div>
-                <header></header>
+                <header>
                     <h2>Contact</h2>
                     <p>We like to know new people</p>
                 </header>
