--- a/html_advanced/23-index.html
+++ b/html_advanced/23-index.html
@@ -51,22 +51,31 @@
                     </header>
                     <div>
                         <h3>
-                            <a href="#">Design & Concept</a>
+                            <a href="#">
+                                Design & Concept
+                            </a>
+                        <h3>
+                            <a href="#">
+                                Digital Strategy
+                            </a>
                         </h3>
                         <h3>
-                            <a href="#">Digital Strategy</a>
-                        </h3>
-                        <h3>
-                            <a href="#">Content Strategy</a>
+                            <a href="#">
+                                Content Strategy
+                            </a>
                         </h3>
                         <h3>
                             <a href="#">UX Design</a>
                         </h3>
                         <h3>
-                            <a href="#">Web Development</a>
+                            <a href="#">
+                                Web Development
+                            </a>
                         </h3>
                         <h3>
-                            <a href="#">Social Media</a>
+                            <a href="#">
+                                Social Media
+                            </a>
                         </h3>
                     </div>
                 </div>
@@ -82,18 +91,22 @@
                     <div>
                         <article>
                             <h3>
-                                <a href="#">Interior Design</a>
+                                <a href="#">
+                                    Interior Design
+                                </a>
                             </h3>
                         </article>
                         <article>
                             <h3>
-                                <a href="#">Web Development</a>
-                            </h3>
+                                <a href="#">
+                                    Web Development
+                                </a>
                         </article>
                         <article>
                             <h3>
-                                <a href="#">Personal Brand</a>
-                            </h3>
+                                <a href="#">
+                                    Personal Brand
+                                </a>
                         </article>
                     </div>
                 </div>
@@ -132,16 +145,17 @@
                                 Career
                             </p>
                             <h3>
-                                <a href="#">Hoc loco tenere se Triarius non potuit</a>
-                            </h3>
+                                <a href="#">
+                                    Hoc loco tenere se Triarius non potuit.
+                                </a>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
                         </article>
                         <article>
                             <p>Digital Life
                             </p>
-                            <h3>
-                                <a href="#">hUt alios omittam, hunc appello, quem ille unum secutus est.</a>
-                            </h3>
+                            <a href="#">
+                                Ut alios omittam, hunc appello, quem ille unum secutus est.
+                            </a>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p>
                         </article>
                         <article>
@@ -149,7 +163,9 @@
                                 Social
                             </p>
                             <h3>
-                                <a href="#">Bestiarum vero nullum iudicium puto.</a>
+                                <a href="#">
+                                    Bestiarum vero nullum iudicium puto.
+                                </a>
                             </h3>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
