--- a/html_advanced/23-index.html
+++ b/html_advanced/23-index.html
@@ -65,7 +65,9 @@
                             </a>
                         </h3>
                         <h3>
-                            <a href="#">UX Design</a>
+                            <a href="#">
+                                UX Design
+                            </a>
                         </h3>
                         <h3>
                             <a href="#">
