--- a/html_advanced/26-styleguide.html
+++ b/html_advanced/26-styleguide.html
@@ -34,16 +34,18 @@
                     <p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
             </section>
             </main>
-        <!-- List -->
+        <!-- Lists -->
         <section>
             <header>
                 <h2>List</h2>
+            </header>
                     <div>
                         <h3>Unordered</h3>
                             <ul>
                                 <li>Dolor pulvinar etiam magna etiam.</li>
                                 <li>Sagittis adipiscing lorem eleifend.</li>
                                 <li>Felis enim feugiat dolore viverra.</li>
+                            </ul>
                         <h3>Ordered</h3>
                             <ol>
                                 <li>Dolor pulvinar etiam magna etiam.</li>
