--- a/html_advanced/29-index.html
+++ b/html_advanced/29-index.html
@@ -221,8 +221,7 @@
                     <article>
                         <blockquote>
                             <p>I am completely blown away. Thanks to Techium, we've just launched our 5th website!</p>
-                            <cite>— Yuri Y.
-                            </cite>
+                            <cite>Yuri Y.</cite>
                         </blockquote>
                     </article>
                     <article>
