--- a/html_advanced/30-styleguide.html
+++ b/html_advanced/30-styleguide.html
@@ -84,15 +84,13 @@
                     <h3>Inline quote</h3>
                     <q>Stay hungry. Stay foolish.</q>
                 </div>
-
-                <!-- Autre div pour blockquote -->
                 <div>
                     <h3>Blockquote</h3>
-                <blockquote>
-                    <q>I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus. I think that's a responsibility that I have, to push possibilities, to show people, this is the level that things could be at..</q>
-                    <cite>Kanye West, Musician
-                    </cite>
-                </blockquote>
+                    <blockquote>
+                        <p>I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus. I think that's a responsibility that I have, to push possibilities, to show people, this is the level that things could be at..</p>
+                        <cite>Kanye West, Musician
+                        </cite>
+                    </blockquote>
                 </div>
 
         </section>
