--- a/html_advanced/32-styleguide.html
+++ b/html_advanced/32-styleguide.html
@@ -100,16 +100,13 @@
                 <h2>Typography</h2>
             </header>
             <div>
-                <address>
-                    320 Stewart Avenue, Unit 12<br>
-                    New York City NY 10001
-                </address>
+                <address>320 Stewart Avenue, Unit 12<br>New York City NY 10001</address>
             </div>
             <div>
                 <pre>
                     <code>
                         <h2>My title</h2>
-                        <p>Proin lacus turpis, feugiat sit amet sollicitudin non, volutpat in libero. Aenean hendrerit ultrices nulla ac lobortis. Vestibulum consectetur nibhn vel ante rhoncus faucibus.</p>
+                        <p>Proin lacus turpis, feugiat sit amet sollicitudin non, volutpat in libero. Aenean hendrerit ultrices nulla ac lobortis. Vestibulum consectetur nibh vel ante rhoncus faucibus.</p>
                     </code>
                 </pre>
             </div>
