--- a/html_advanced/34-styleguide.html
+++ b/html_advanced/34-styleguide.html
@@ -149,7 +149,7 @@
         </table>
     </section>
 
-    <!--Details-->
+    <!-- Details -->
     <section>
         <header>
             <h2>Details</h2>
@@ -158,14 +158,14 @@
             <h3>Default</h3>
             <details>
                 <summary>Show/Hide me</summary>
-                <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
             </details>
         </div>
         <div>
             <h3>Open</h3>
             <details open>
-                <summary>Always Open</summary>
-                <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                <summary>Always open</summary>
+                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
             </details>
         </div>
     </section>
