--- a/html_advanced/36-index.html
+++ b/html_advanced/36-index.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <link rel="icon" type="image/png" href="./favicon.png" />
 </head>
+
 <body>
 
     <!-- Header -->
@@ -16,7 +17,9 @@
         <div>
             <div>
                 <a href="/">
-                    <img src="./logo-black.png" alt="Techium logo" width="160" height="40">
+                    <span>
+                        <img src="./logo-black.png" alt="Techium logo" width="160" height="40" />
+                    </span>
                 </a>
             </div>
             <nav>
@@ -95,12 +98,11 @@
                     <h2>Works</h2>
                     <p>Take a look in our portfolio</p>
                 </header>
-
                 <div>
                     <article>
-                    <div>
-                        <img src="./images/pic-work-01.jpg" alt="empty">
-                    </div>
+                        <div>
+                            <img src="images/pic-work-01.jpg" alt="" />
+                        </div>
                         <h3>
                             <a href="#">
                                 Interior Design
@@ -109,7 +111,7 @@
                     </article>
                     <article>
                         <div>
-                            <img src="./images/pic-work-02.jpg" alt="empty">
+                            <img src="images/pic-work-02.jpg" alt="" />
                         </div>
                         <h3>
                             <a href="#">
@@ -119,7 +121,7 @@
                     </article>
                     <article>
                         <div>
-                            <img src="./images/pic-work-03.jpg" alt="empty">
+                            <img src="images/pic-work-03.jpg" alt="" />
                         </div>
                         <h3>
                             <a href="#">
@@ -140,7 +142,7 @@
                 </header>
 
                 <div>
-                    <img src="./images/pic-about-us.jpg" alt="" width="460" height="447">
+                    <img src="images/pic-about-us.jpg" alt="" width="460" height="447" />
                     <h3>Who are we</h3>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum,
@@ -170,15 +172,17 @@
                 <header>
                     <h2>Latest news</h2>
                 </header>
+
                 <div>
-                    <img src="./images/pic-blog-01.jpg" alt="" width="305" height="205">
-                </div>
                     <article>
+                        <div>
+                            <img src="images/pic-blog-01.jpg" alt="" width="305" height="205"/>
+                        </div>
                         <p>
                             Career
                         </p>
                         <h3>
-                            <a href="#">
+                            <a herf="#">
                                 Hoc loco tenere se Triarius non potuit.
                             </a>
                         </h3>
@@ -189,7 +193,9 @@
                         <small>By Kelly D.</small>
                     </article>
                     <article>
-                        <img src="images/pic-person-02.jpg" alt="Dorrie S. avatar" width="100px" height="100px" />
+                        <div>
+                            <img src="images/pic-blog-02.jpg" alt="" width="305" height="205"/>
+                        </div>
                         <p>
                             Digital Life
                         </p>
@@ -206,7 +212,9 @@
                         <small>By William A.</small>
                     </article>
                     <article>
-                        <img src="images/pic-person-03.jpg" alt="Sven H. avatar" width="100px" height="100px" />
+                        <div>
+                            <img src="images/pic-blog-03.jpg" alt="" width="305" height="205"/>
+                        </div>
                         <p>
                             Social
                         </p>
@@ -222,6 +230,7 @@
                         </p>
                         <small>By Frances J.</small>
                     </article>
+                </div>
             </div>
         </section>
 
@@ -237,21 +246,28 @@
                     <article>
                         <img src="images/pic-person-01.jpg" alt="Yuri Y. avatar" width="100px" height="100px" />
                         <blockquote>
-                            <p>I am completely blown away. Thanks to Techium, we've just launched our 5th website!</p>
+                            <p>
+                                I am completely blown away. Thanks to Techium, we've just launched our 5th website!
+                            </p>
                             <cite>Yuri Y.</cite>
                         </blockquote>
                     </article>
                     <article>
                         <img src="images/pic-person-02.jpg" alt="Dorrie S. avatar" width="100px" height="100px" />
                         <blockquote>
-                            <p>Thank you so much for your help. Techium company is awesome!</p>
+                            <p>
+                                Thank you so much for your help. Techium company is awesome!
+                            </p>
                             <cite>Dorrie S.</cite>
                         </blockquote>
                     </article>
                     <article>
                         <img src="images/pic-person-03.jpg" alt="Sven H. avatar" width="100px" height="100px" />
                         <blockquote>
-                            <p>I love your system. Definitely worth the investment. I'd be lost without Techium company.</p>
+                            <p>
+                                I love your system. Definitely worth the investment. I'd be lost without Techium
+                                company.
+                            </p>
                             <cite>Sven H.</cite>
                         </blockquote>
                     </article>
@@ -280,7 +296,7 @@
 
     <!-- Footer -->
     <footer>
-        <img src="./logo-black.png" alt="Techium logo" width="160" height="40">
+        <img src="./logo-black.png" alt="Techium logo" width="160" height="40" />
         <address>
             234 Washington Street<br>
             Urbana, Illinois
@@ -303,4 +319,3 @@
         </div>
     </footer>
 </body>
-</html>
